[gd_scene load_steps=3 format=3 uid="uid://cnqwx2yywnbfz"]

[ext_resource type="Script" path="res://scripts/Monster.gd" id="1_monster"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(28, 28)

[node name="Monster" type="CharacterBody2D" groups=["monsters"]]
script = ExtResource("1_monster")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="MonsterSprite" type="ColorRect" parent="."]
offset_left = -14.0
offset_top = -14.0
offset_right = 14.0
offset_bottom = 14.0
color = Color(0.3, 0.8, 0.3, 1)

[node name="NameLabel" type="Label" parent="."]
offset_left = -50.0
offset_top = -30.0
offset_right = 50.0
offset_bottom = -15.0
text = "Monster"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
offset_bottom = -36.0
max_value = 100.0
value = 100.0
show_percentage = false
